--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx cypress open"
+    "start": "npx cypress open",
+    "first-google-search.spec": "npx cypress run --spec \"cypress/integration/first/google-search.spec.js\""
   },
   "repository": {
     "type": "git",
