--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/dingzhengru/cypress-first#readme",
   "dependencies": {
+    "axios": "^0.26.0",
+    "blueimp-md5": "^2.19.0",
     "cypress": "^9.5.1",
+    "dayjs": "^1.10.8",
     "jimp": "^0.16.1",
     "tesseract.js": "^2.1.5"
   }
